# LyricsFlow-TypeF

./: .env  .gitignore  Dockerfile  LICENSE  Readme.md  debug_qrc_text.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: lyrics.py
app/core/: cleaner.py  decrypter.py  http_client.py  manual_des.py  netease_crypto.py  parser.py  uncensor.py
app/meting/: __init__.py  base.py  meting.py
app/meting/providers/: __init__.py  kugou.py  netease.py  tencent.py
app/schemas/: models.py
app/services/: aggregator.py  ai_service.py  lyrics_service.py  storage_service.py
app/services/providers/: base.py  kugou.py  musixmatch.py  netease.py  qq.py
scripts/: debug_probe.py  manual_test.py  print_lyrics.py  quick_test.py  test_cleaning.py  test_decrypter.py  test_latency.py  test_meting.py  test_remote_speed.py  test_search.py  verify_api.py
